// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Tag medium matches snapshot (desktop clickable) 1`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
  font-family: var(--font-family);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #1B1C1E;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<button
  class="c0 c1"
  type="button"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`Tag Tag medium matches snapshot (desktop deletable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c4:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c4 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

.c5:hover {
  background-color: #DBDEE1;
  color: #1B1C1E;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="deleteButtonAriaLabel"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
</span>
`;

exports[`Tag Tag medium matches snapshot (desktop with icons) 1`] = `
.c2 {
  color: #60666E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="default"
    data-testid="Test-icon"
    height="12"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag medium matches snapshot (desktop) 1`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag medium matches snapshot (desktop) 2`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag medium matches snapshot (mobile clickable) 1`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-3x);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
  font-family: var(--font-family);
  padding-left: var(--spacing-1halfx);
  padding-right: var(--spacing-1halfx);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #1B1C1E;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<button
  class="c0 c1"
  type="button"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`Tag Tag medium matches snapshot (mobile deletable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c4:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c4 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

.c5:hover {
  background-color: #DBDEE1;
  color: #1B1C1E;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="deleteButtonAriaLabel"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
</span>
`;

exports[`Tag Tag medium matches snapshot (mobile with icons) 1`] = `
.c2 {
  color: #60666E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="default"
    data-testid="Test-icon"
    height="12"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag medium matches snapshot (mobile) 1`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag medium matches snapshot (mobile) 2`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.875rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag small matches snapshot (desktop clickable) 1`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
  font-family: var(--font-family);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #1B1C1E;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<button
  class="c0 c1"
  type="button"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`Tag Tag small matches snapshot (desktop deletable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c4:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c4 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

.c5:hover {
  background-color: #DBDEE1;
  color: #1B1C1E;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="deleteButtonAriaLabel"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
</span>
`;

exports[`Tag Tag small matches snapshot (desktop with icons) 1`] = `
.c2 {
  color: #60666E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="default"
    data-testid="Test-icon"
    height="12"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag small matches snapshot (desktop) 1`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag small matches snapshot (desktop) 2`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag small matches snapshot (mobile clickable) 1`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-2halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
  font-family: var(--font-family);
  padding-left: var(--spacing-1x);
  padding-right: var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c1:hover {
  background-color: #DBDEE1;
  border-color: #1B1C1E;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<button
  class="c0 c1"
  type="button"
>
  <span
    class="c2"
  >
    Test
  </span>
</button>
`;

exports[`Tag Tag small matches snapshot (mobile deletable) 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-1halfx);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  min-width: var(--size-1halfx);
  padding: 0;
  width: var(--size-1halfx);
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c4:hover,
.c4[aria-expanded='true'] {
  background-color: #DBDEE1;
  border-color: transparent;
  color: #1B1C1E;
}

.c4:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
}

.c4 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: var(--spacing-half);
  margin-right: calc(-1 * var(--spacing-half));
  min-height: auto;
  min-width: auto;
  width: auto;
}

.c5 > svg {
  height: 1rem;
  width: 1rem;
}

.c5:hover {
  background-color: #DBDEE1;
  color: #1B1C1E;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
  <button
    aria-label="deleteButtonAriaLabel"
    class="c3 c4 c5"
    data-testid="Test-remove-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
</span>
`;

exports[`Tag Tag small matches snapshot (mobile with icons) 1`] = `
.c2 {
  color: #60666E;
  height: var(--size-1x);
  margin-right: var(--spacing-half);
  vertical-align: text-bottom;
  width: var(--size-1x);
}

.c3 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="default"
    data-testid="Test-icon"
    height="12"
    role="img"
    width="12"
  />
  <span
    class="c3"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag small matches snapshot (mobile) 1`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 1rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-half);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</span>
`;

exports[`Tag Tag small matches snapshot (mobile) 2`] = `
.c2 {
  color: #1B1C1E;
  display: inline-block;
  font-size: 0.875rem;
  line-height: 1.5rem;
  max-width: 312px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius-1halfx);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<span
  class="c0 c1"
>
  <span
    class="c2"
  >
    Test
  </span>
</span>
`;
